...
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
  "account_details_filter_tags_sortBy": "Sort by",
  "account_details_untagged_card": "Untagged",
  "account_emptyTxHistoryTextExplainer_FilteredView": "Applied filters are hiding all transactions.\nUpdate or reset filters to view transactions.",
  "account_empty_tx_history_text_explainer": "There are no transactions in this account.\nReceive your first transaction below.",
  "account_type_label_taproot": "Taproot",
  "account_type_sublabel_testnet": "Testnet",
  "accounts_empty_text_explainer": "Create a mobile wallet with Magic Backups.",
  "accounts_empty_text_learn_more": "Get Started",
...
  "activity_passportUpdate": "Passport update available",
  "activity_pending": "Pending",
  "activity_received": "Received",
  "activity_sent": "Sent",
  "activity_sent_boosted": "Sent (Boosted)",
  "activity_sent_canceled": "Canceled",
...
  "backups_toggle_envoy_mobile_wallet_key": "Mobile Wallet Key",
  "backups_viewMobileWalletSeed": "View Mobile Wallet Seed",
  "bottomNav_accounts": "Accounts",
  "bottomNav_activity": "Activity",
  "bottomNav_devices": "Devices",
  "bottomNav_learn": "Learn",
  "bottomNav_privacy": "Privacy",
...
  "component_24WordSeed": "24 Word Seed",
  "component_Apply": "Apply",
  "component_advanced": "Advanced",
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
  "component_dismiss": "Dismiss",
  "component_done": "Done",
  "component_dontShowAgain": "Don’t show again",
...
  "component_resetSorting": "Reset sorting",
  "component_retry": "Retry",
  "component_save": "Save",
  "component_searching": "Searching",
  "component_skip": "Skip",
...
  "firmware_updatingPrime_verifying": "Verifying Update",
  "header_chooseAccount": "CHOOSE ACCOUNT",
  "hide_amount_first_time_text": "Swipe to show and hide your balance.",
  "hot_wallet_accounts_creation_done_text_explainer": "Tap the above card to receive Bitcoin.",
  "hot_wallet_accounts_creation_done_text_explainer_more_than_1_accnt": "Tap any of the above cards to receive Bitcoin.",
  "invalid_qr_heading": "Invalid QR Code",
  "invalid_qr_subheading": "QR code does not contain a valid Bitcoin transaction (PSBT). Please check and try again.",
...
  "manage_device_details_inactive": "Inactive",
  "manage_device_details_menu_disconnectDevice": "Disconnect",
  "manage_device_details_menu_editDevice": "Edit Device Name",
  "manage_device_details_menu_unpairPassport": "Unpair Passport",
  "manage_device_details_unpaired": "Unpaired",
...
  "receive_tx_list_awaitingConfirmation": "Awaiting confirmation",
  "receive_tx_list_change": "Change",
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
  "receive_tx_list_transfer": "Transfer",
  "receive_verifyModalCore_content": "Navigate to {AccountName} on Passport, choose ‘Account Tools’ then ‘Verify Address’ and scan the QR code below.",
...
  "send_build_header": "Check Transaction Details",
  "send_build_subheader": "Confirm the transaction details are correct before continuing.",
  "send_build_viewEditDetails": "View and Edit Details",
  "send_editTxDetailsSubsatModal_activate": "Activate",
  "send_editTxDetailsSubsatModal_content": "Check that the connected node can facilitate fee rates below 1 sat/vb before continuing.",
...
  "send_keyboard_amount_insufficient_funds_info": "Insufficient Funds",
  "send_keyboard_amount_too_low_info": "Amount too low",
  "send_keyboard_enterAddress": "Enter address",
  "send_keyboard_send_max": "Send Max",
  "send_keyboard_to": "To:",
...
  "settings_advanced": "Advanced",
  "settings_advancedModalReceiveSegwit_content": "With this toggle off, Native Segwit addresses will be generated when you tap receive. This is the default address type used by most Bitcoin wallets.",
  "settings_advancedModalReceiveSegwit_title": "Receive to Segwit",
  "settings_advancedModalReceiveTaproot_content": "With this toggle on, Taproot addresses will be generated when you tap receive. Ensure entities sending you Bitcoin are Taproot compatible before proceeding.",
  "settings_advancedModalReceiveTaproot_title": "Receive to Taproot",
...
  "tagged_tagDetails_sheet_retag_cta2": "Retag Selected",
  "tagged_tagDetails_sheet_transferSelected": "Transfer Selected",
  "tap_and_drag_first_time_text": "Hold to drag and reorder your accounts.",
  "taproot_passport_dialog_heading": "Taproot on Passport",
  "taproot_passport_dialog_later": "Do It Later",
  "taproot_passport_dialog_reconnect": "Reconnect Passport",
...
