...
                      Padding(
                        padding: EdgeInsets.only(
                            bottom: widget.onPrimaryButtonTap == null
                                ? 0
                                : EnvoySpacing.medium1),
                        child: Semantics(
                          identifier: 'PopUp Secondary Button',
                          container: true,
                          button: true,
                          excludeSemantics: true,
                          child: EnvoyButton(widget.secondaryButtonLabel!,
                              type: EnvoyButtonTypes.secondary, onTap: () {
                            if (widget.onSecondaryButtonTap != null) {
...
                            }
                          }),
                        ),
                      ),
                    if (widget.onPrimaryButtonTap != null)
                      Semantics(
                        identifier: 'PopUp Primary Button',
                        container: true,
                        button: true,
                        excludeSemantics: true,
                        child: EnvoyButton(widget.primaryButtonLabel,
                            type: EnvoyButtonTypes.primary, onTap: () {
                          widget.onPrimaryButtonTap?.call(context);
...
