...
          children: [
            dismissible
                ? Align(
                    alignment:
                        Alignment.centerRight.add(const Alignment(.1, 0)),
                    child: Semantics(
                      identifier: 'Dialog Close Button',
                      container: true,
                      button: true,
                      excludeSemantics: true,
                      child: GestureDetector(
                        behavior: HitTestBehavior.opaque,
                        onTap: () {
...
