# SPDX-FileCopyrightText: 2026 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

# (16) enableTaproot
appId: com.foundationdevices.envoy
---

# go to advanced
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced


# enable taproot if disabled
- runFlow:
    when:
      visible:
        id: "Taproot Toggle-false"
    commands:
      - tapOn:
          id: Taproot Toggle-false
      - tapOn:
          id: PopUp Primary Button
      - tapOn:
          id: PopUp Secondary Button
      - assertNotVisible:
          id: envoy_icon_info
      - assertNotVisible: Taproot on Passport

# disable taproot if enabled
- runFlow:
    when:
      visible:
        id: "Taproot Toggle-true"
    commands:
      - tapOn:
          id: Taproot Toggle-true
      - tapOn:
          id: PopUp Primary Button
      - assertNotVisible: Receive to Segwit

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# go to account
- tapOn: GH TEST ACC (#1)

# receive
- tapOn: Receive

# check if address starts with this
- assertVisible:
    text: "tb1p.*"

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# go to advanced
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

# disable taproot
- tapOn:
    id: Taproot Toggle-true
- tapOn:
    id: PopUp Primary Button

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# go to receive
- tapOn: GH TEST ACC (#1)
- tapOn: Receive

# check if address starts with this
- assertVisible:
    text: "tb1q.*"

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu

# go to advanced
- tapOn:
    id: hamburger_menu
- tapOn: |-
    SETTINGS
    SETTINGS
- tapOn: Advanced

- tapOn:
    id: Taproot Toggle-false

- tapOn:
    id: PopUp Primary Button
- tapOn:
    id: PopUp Secondary Button

# back to home
- tapOn:
    id: hamburger_menu
- tapOn:
    id: hamburger_menu